[package]
name = "dwarf-texture-generator-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
clap-num = "1.1.1"
image = "0.25.1"
mlua = { version = "0.9.7", features = ["lua54", "vendored"] }
rand = { version = "0.8.5", features = ["small_rng"] }
nalgebra = "0.29"
